[Fix] Fix in Jena axiom loading.